Updated checkstyle config, changed artifactid, added errorprone, checkerframework and jmolecules, fixed warnings